--- a/templates/emails/link.html
+++ b/templates/emails/link.html
@@ -18,7 +18,7 @@
                                                                     <tbody>
                                                                         <tr>
                                                                             <td align="center" style="padding:0;Margin:0;font-size:0px">
-                                                                                <a href="https://teamtators.org/dashboard" style="text-decoration:underline;color:#134f5c;font-size:16px" target="_blank"><img src="https://teamtators.org/static/pictures/tators-logo.jpg" alt="" style="display:block;border:0;outline:none;text-decoration:none" width="100"></a>
+                                                                                <a href="{homeLink}" style="text-decoration:underline;color:#134f5c;font-size:16px" target="_blank"><img src="{logo}" alt="" style="display:block;border:0;outline:none;text-decoration:none" width="100"></a>
                                                                             </td>
                                                                         </tr>
                                                                         <tr>
