--- a/templates/index.html
+++ b/templates/index.html
@@ -39,7 +39,7 @@
         </div>
     </div>
 
-    <div class="fs-black text-light" id="loading-page">
+    <!-- <div class="fs-black text-light" id="loading-page">
         <div class="fs-bg">
             <div class="fs-fg">
                 <div class="spinner-border" role="status">
@@ -65,7 +65,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
 
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top shadow" id="top-navbar">
@@ -139,31 +139,13 @@
             </div>
         </div>
     </nav>
-    <!-- End Navbar -->
-
-
-    <!-- Modal Body -->
-    <!-- if you want to close by clicking outside the modal, delete the last endpoint:data-bs-backdrop and data-bs-keyboard -->
-    <div class="modal fade" id="server-log-modal" tabindex="-1" data-bs-backdrop="static" data-bs-keyboard="false" role="dialog" aria-labelledby="modalTitleId" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-scrollable modal-dialog-centered modal-lg" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="modalTitleId">All Logs</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    <pre id="server-log" class="bg-dark p-3 rounded w-100 p-3 text-light"></pre>
-                </div>
-            </div>
-        </div>
-    </div>
 
     <!-- Sidebar/offcanvas -->
     <div class="offcanvas offcanvas-start bg-dark text-white sidebar-nav shadow" tabindex="-1" id="side-bar-nav" aria-labelledby="side-bar-navLabel">
         <div class="offcanvas-body p-0">
             <nav class="navbar-dark">
                 <ul class="navbar-nav">
-                    <repeat  id="navSections">
+                    <repeat id="navSections">
                         <script cstr id="navScript">
                             if (type == 'navTitle') {
                                 return `<li>
